--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/08/2020 02:04:00 PM</p>
+    <p class="lastupdate">09/08/2020 02:09:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,31 +50,31 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">97.5&#176;F</td>
+        <td class="data">97.0&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">97.5&#176;F</td>
+        <td class="data">97.0&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">97.5&#176;F</td>
+        <td class="data">97.0&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">53.4&#176;F</td>
+        <td class="data">54.2&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">23%</td>
+        <td class="data">24%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.577 inHg (-0.041)</td>
+        <td class="data">29.577 inHg (-0.040)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">2 mph WSW (248&#176;)</td>
+        <td class="data">1 mph SSW (202&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,7 +86,7 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">83.8&#176;F</td>
+        <td class="data">83.9&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
@@ -235,8 +235,8 @@
       <tr>
         <td class="label">Dew Point</td>
         <td class="data new_row hilo_day">
-          <span title="11:44:16 AM">
-            53.5</span><br/>
+          <span title="02:08:46 PM">
+            54.2</span><br/>
           <span title="06:45:27 AM">
             44.4</span>
         </td>
@@ -564,7 +564,7 @@
     <tr><th>Connectivity</th><th></th></tr>
     <tr>
       <td class="label">Signal Quality</td>
-      <td class="data">94%</td>
+      <td class="data">98%</td>
     </tr>
 
     <tr><th>Battery Status</th><th></th></tr>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">6 days, 23 hours, 17 minutes</td>
+      <td class="data">6 days, 23 hours, 22 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">6 days, 23 hours, 17 minutes</td>
+      <td class="data">6 days, 23 hours, 22 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
