--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/08/2020 02:49:00 PM</p>
+    <p class="lastupdate">09/08/2020 02:54:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,19 +50,19 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">92.9&#176;F</td>
+        <td class="data">92.4&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">92.9&#176;F</td>
+        <td class="data">92.4&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">92.9&#176;F</td>
+        <td class="data">92.4&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">52.9&#176;F</td>
+        <td class="data">52.5&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
@@ -70,11 +70,11 @@
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.569 inHg (-0.037)</td>
+        <td class="data">29.566 inHg (-0.038)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">4 mph SSW (202&#176;)</td>
+        <td class="data">6 mph S (180&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,7 +86,7 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">84.5&#176;F</td>
+        <td class="data">84.6&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
@@ -305,32 +305,32 @@
         <td class="data new_row hilo_day">
           <span title="12:02:01 AM">
             29.650</span><br/>
-          <span title="02:42:02 PM">
-            29.568</span>
+          <span title="02:53:02 PM">
+            29.566</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="09:59:02 AM (Sunday)">
             29.954</span><br/>
-          <span title="02:42:02 PM (Tuesday)">
-            29.568</span>
+          <span title="02:53:02 PM (Tuesday)">
+            29.566</span>
         </td>
         <td class="data new_row hilo_month">
           <span title="09/02/2020 09:40:02 AM">
             30.063</span><br/>
-          <span title="09/08/2020 02:42:02 PM">
-            29.568</span>
+          <span title="09/08/2020 02:53:02 PM">
+            29.566</span>
         </td>
         <td class="data new_row hilo_year">
           <span title="07/04/2020 08:07:00 AM">
             30.065</span><br/>
-          <span title="09/08/2020 02:42:02 PM">
-            29.568</span>
+          <span title="09/08/2020 02:53:02 PM">
+            29.566</span>
         </td>
         <td class="data new_row hilo_rainyear">
           <span title="07/04/2020 08:07:00 AM">
             30.065</span><br/>
-          <span title="09/08/2020 02:42:02 PM">
-            29.568</span>
+          <span title="09/08/2020 02:53:02 PM">
+            29.566</span>
         </td>
         <td class="units"> inHg</td>
       </tr>
@@ -375,9 +375,9 @@
       <tr>
         <td class="label">Wind Max</td>
         <td class="data new_row hilo_day">
-          <span title="02:46:56 PM">
-            9</span><br/>
-          193
+          <span title="02:52:54 PM">
+            10</span><br/>
+          205
         </td>
         <td class="data new_row hilo_week">
           <span title="04:31:00 PM (Monday)">
@@ -440,7 +440,7 @@
         </td>
         <td class="data new_row hilo_day">
           0<br/>
-          63
+          79
         </td>
         <td class="data new_row hilo_week">
           1<br/>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">7 days, 0 hours, 2 minutes</td>
+      <td class="data">7 days, 0 hours, 7 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">7 days, 0 hours, 2 minutes</td>
+      <td class="data">7 days, 0 hours, 7 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
