--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/08/2020 03:14:00 PM</p>
+    <p class="lastupdate">09/08/2020 03:19:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,19 +50,19 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">91.5&#176;F</td>
+        <td class="data">92.1&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">91.5&#176;F</td>
+        <td class="data">92.1&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">91.5&#176;F</td>
+        <td class="data">92.1&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">51.7&#176;F</td>
+        <td class="data">52.2&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
@@ -70,11 +70,11 @@
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.568 inHg (-0.024)</td>
+        <td class="data">29.570 inHg (-0.023)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">6 mph S (180&#176;)</td>
+        <td class="data">7 mph SSW (202&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -440,11 +440,11 @@
         </td>
         <td class="data new_row hilo_day">
           0<br/>
-          147
+          154
         </td>
         <td class="data new_row hilo_week">
           1<br/>
-          357
+          356
         </td>
         <td class="data new_row hilo_month">
           1<br/>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">7 days, 0 hours, 27 minutes</td>
+      <td class="data">7 days, 0 hours, 32 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">7 days, 0 hours, 27 minutes</td>
+      <td class="data">7 days, 0 hours, 32 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
